--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/logo.jpg" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>TCPliage - Fabrication Métallique d'Urgence</title>
     <meta name="description" content="TCPliage, votre spécialiste en fabrication de pièces métalliques d'urgence pour chantiers. Service disponible 24h/24 et 7j/7.">
