--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="fr">
   <head>
+    <script>
+  document.documentElement.setAttribute('data-theme', 'light');
+  document.documentElement.style.colorScheme = 'light';
+</script>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/logo.jpg" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
